--- a/index.html
+++ b/index.html
@@ -18,7 +18,42 @@
   </head>
   <body>
     <div class="boxes">
-      <div class="box-1"></div>
+      <div class="box-1">
+        <div class="image-icon">
+          <img
+            src="images/image-daniel.jpg"
+            class="image-daniel"
+            alt=""
+            srcset=""
+          />
+
+          <div class="daniel-txt">
+            <p>Daniel Clifford</p>
+            <span>Verified Graduate</span>
+          </div>
+        </div>
+        <div class="quotation-section">
+          <h3>
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny’s worth.
+          </h3>
+          <img
+            src="images/bg-pattern-quotation.svg"
+            alt="quotation"
+            class="quotation-img"
+          />
+          <p class="emt-text">
+            “ I was an EMT for many years before I joined the bootcamp. I’ve
+            been looking to make a transition and have heard some people who had
+            an amazing experience here. I signed up for the free intro course
+            and found it incredibly fun! I enrolled shortly thereafter. The next
+            12 weeks was the best - and most grueling - time of my life. Since
+            completing the course, I’ve successfully switched careers, working
+            as a Software Engineer at a VR startup. ”
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
