--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
           </p>
         </div>
       </div>
+
+      <div class="box-2">
+        <div class="image-icon">
+          <img
+            src="images/image-jonathan.jpg"
+            class="image-jonathan"
+            alt=""
+            srcset=""
+          />
+
+          <div class="jonathan-txt">
+            <p>Jonathan Walters</p>
+            <span>Verified Graduate</span>
+          </div>
+        </div>
+        <div class="quotation-section">
+          <h3 class="jonathan-h3">
+            The team was very supportive and kept me motivated
+          </h3>
+
+          <p class="emt-text-jonathan">
+            “ I started as a total newbie with virtually no coding skills. I now
+            work as a mobile engineer for a big company. This was one of the
+            best investments I’ve made in myself. ”
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
