--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="quotation-section">
-          <h3 class="jeanette-h3">
+          <h3 class="patrick-h3">
             Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
             learning from their experiences was easy.
           </h3>
